--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-2024-portfolio",
+  "name": "2024-react-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://connerc11.github.io/2024-react-project.connerc11.github.io",
+  "homepage": "https://connerc11.github.io/2024-react-project",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
